Leverage Shipable.io to validate mustache templates (#3333)
* add run all petstore shell script

* add run all petstore batch file for windows tests

* better output for travis and appveyor

* add shippable config to test all petstore

* show log after test script

* remo all-petstore, update travis build

* update shiippable config

* add run-all-petstore

* failure test using ruby model

* use bash script for run-all-petstore

* update script permission

* fix html batch script

* fix missing doc in jaxrs spec generator

* fix missing api, model test in jaxrs spec generator

* rename licenseInfo for lumen

* remove ruby model failure (for CI test)

* fix "the input line is too long"

* update windows batch file to shorten the commands

* update appveyor config

* update shippable config

* add build script

* update batch file to remove args option

* fix window batch file for spring mvc/boot

* remove logging output to file