@@ -4,7 +4,7 @@ If Not Exist %executable% (
   mvn clean package
 )
 
-set JAVA_OPTS=%JAVA_OPTS% -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties
-set ags=generate -t modules\swagger-codegen\src\main\resources\JavaSpringMVC -i modules\swagger-codegen\src\test\resources\2_0\petstore.json -l spring-mvc -o samples\server\petstore\spring-mvc
+REM set JAVA_OPTS=%JAVA_OPTS% -Xmx1024M
+set ags=generate -i modules\swagger-codegen\src\test\resources\2_0\petstore.json -l spring --library=spring-mvc -o samples\server\petstore\spring-mvc
 
 java %JAVA_OPTS% -jar %executable% %ags%
